--- a/AzarKandidaV2/Content/css/Global.css
+++ b/AzarKandidaV2/Content/css/Global.css
@@ -74,88 +74,56 @@ backdrop-filter: saturate(80%);
   margin: 0;
   padding: 0; }
 
-.navigation {
-  height: 100px;
-  border-bottom: 1px solid #dadada;
-  background-color: #fff !important;
-  padding: 12px;
-  display: flex;
-  flex-direction: row;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-align-items: stretch;
-  align-items: stretch; }
-  .navigation .navbar-brand {
-    display: block;
-    display: flex;
-    flex-direction: column;
-    padding: 0; }
-    .navigation .navbar-brand .title {
-      margin-bottom: 0; }
-      .navigation .navbar-brand .title img {
-        height: 42px; }
-    .navigation .navbar-brand .subtitle {
-      margin-top: 4px;
-      margin-bottom: 0;
-      font-size: .7em;
-      color: #2B2E83;
-      height: 12px; }
-  .navigation .men {
-    -moz-border-radius: 6px 6px 6px 6px;
-    -webkit-border-radius: 6px 6px 6px 6px;
-    border-radius: 6px 6px 6px 6px;
-    border: 1px solid #eee; }
-  @media only screen and (max-width: 324px) {
-    .navigation .men {
-      display: none; } }
-  .navigation .logo {
-    height: auto;
-    display: block; }
-    .navigation .logo img {
-      height: 100%;
-      width: auto; }
-
-@media only screen and (max-width: 424px) {
-  .navigation {
-    height: 80px;
-    border-bottom: 1px solid #dadada;
-    background-color: #fff !important;
-    padding: 12px;
+.navheader {
+  height: 92px;
+  padding-right: 8px;
+  /*border-bottom: $mat-border-color 1px solid;*/
+  grid-gap: 12px;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  right: 0;
+  -moz-box-shadow: rgba(0, 0, 0, 0.16) 0 8px 12px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0 8px 12px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0 8px 12px;
+  background-color: white; }
+  .navheader .navheader-content {
     display: flex;
     flex-direction: row;
+    height: 100%;
+    grid-column-gap: 6px;
     -webkit-justify-content: space-between;
     justify-content: space-between;
-    -webkit-align-items: stretch;
-    align-items: stretch; }
-    .navigation .navbar-brand {
-      display: block;
-      display: flex;
-      flex-direction: column; }
-      .navigation .navbar-brand .title {
-        margin-bottom: 0; }
-        .navigation .navbar-brand .title img {
-          height: 32px; }
-      .navigation .navbar-brand .subtitle {
-        margin-top: 4px;
-        margin-bottom: 0;
-        font-size: .5em;
-        color: #2B2E83;
-        height: 12px; }
-    .navigation .men {
-      -moz-border-radius: 6px 6px 6px 6px;
-      -webkit-border-radius: 6px 6px 6px 6px;
-      border-radius: 6px 6px 6px 6px;
-      border: 1px solid #eee;
-      max-width: 55px; }
-    .navigation .logo {
-      height: auto;
-      display: block; }
-      .navigation .logo img {
-        height: 100%;
-        width: auto; } }
+    -webkit-align-items: center;
+    align-items: center; }
+    .navheader .navheader-content .azarkandida, .navheader .navheader-content .arvintav, .navheader .navheader-content .men {
+      height: 100%;
+      padding: 8px 0; }
+      .navheader .navheader-content .azarkandida img, .navheader .navheader-content .arvintav img, .navheader .navheader-content .men img {
+        height: 100%; }
+    .navheader .navheader-content .arvintav {
+      margin-right: 4px; }
+    .navheader .navheader-content .men {
+      margin: -2px;
+      padding: 0; }
+    .navheader .navheader-content .d-none {
+      grid-area: no; }
+
+@media only screen and (min-width: 540px) and (max-width: 670px) {
+  .navheader {
+    height: 72px; } }
+
+@media only screen and (min-width: 390px) and (max-width: 540px) {
+  .navheader {
+    height: 68px; } }
+
+@media only screen and (max-width: 390px) {
+  .navheader {
+    height: 52px; } }
 
 .container-main {
-  margin-top: calc(100px + 24px); }
+  margin-top: calc(92px + 24px); }
 
 .footer .footer-grid {
   display: grid;
@@ -201,6 +169,7 @@ backdrop-filter: saturate(80%);
         margin-left: 8px;
         min-width: 20px; }
       .footer .footer-links li a label {
-        font-size: 14px; }
+        font-size: 14px;
+        cursor: pointer; }
     .footer .footer-links li a:hover {
       color: #999; }
