--- a/AzarKandidaV2/Views/Shared/_Layout.cshtml
+++ b/AzarKandidaV2/Views/Shared/_Layout.cshtml
@@ -10,6 +10,11 @@
     <link href="~/Content/css/bootstrap.rtl.css" rel="stylesheet" />
     @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">*@
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
+    @*<link href="~/Content/css/slick-theme.css" rel="stylesheet" />*@
+    @*<link href="~/Content/css/slick.css" rel="stylesheet" />*@
+
     <link href="~/Content/css/Global.min.css" rel="stylesheet" />
 
     @RenderSection("Styles", required: false)
@@ -34,7 +39,6 @@
     <div class="container-main container">
         @RenderBody()
     </div>
-
 
     <footer class="footer container-fluid">
         <content class="container-md py-2">
@@ -114,10 +118,16 @@
     </footer>
 
 
-    <script src="~/Content/js/bootstrap.min.js"></script>
-    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>*@
-    <script src="~/Content/js/masonry.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+
+    @*<script src="~/Content/js/jquery.js"></script>*@
+
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="~/Content/js/bootstrap.min.js"></script>
+    <script src="~/Content/js/masonry.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    @*<script src="~/Content/js/slick.min.js"></script>*@
 
     @RenderSection("Scripts", required: false)
 
