--- a/AzarKandidaV2/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AzarKandidaV2/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -58,7 +58,14 @@
                                 <span class="title">کاندیدها</span>
                             </a>
                         </li>
-                       
+                        <li class="nav-item active">
+                            <a href="/Admin/Blog">
+                                <span class="icon-holder">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                                <span class="title">خبرها</span>
+                            </a>
+                        </li>
                         <li class="nav-item active">
                             <a href="/LogOff">
                                 <span class="icon-holder">
