--- a/AzarKandidaV2/Views/Home/Index.cshtml
+++ b/AzarKandidaV2/Views/Home/Index.cshtml
@@ -19,16 +19,19 @@
                 <img src="~/Resources/Blogs/Thumb/@item.MainImage" class="card-img-top" alt="@item.Name">
                 <div class="card-body">
                     <h5 class="card-title">@item.Name</h5>
-                    <p class="card-text">
+                    <p class="card-text">   
                         @item.Title
                     </p>
-                    <a href="/Blog/@item.BlogId/@item.Name.Replace(" ","-")" class="link-primary text-decoration-none">بیشتر...</a>
+                    <a href="/Blogs/@item.BlogId" class="link-primary text-decoration-none">بیشتر...</a>
                 </div>
             </div>
         }
     </div>
 </div>
 
+<h2 class="h5 mb-4" dir="rtl">
+    - کاندیداهای شورای اسلامی شهر تبریز
+</h2>
 <div class="grid">
 
     @foreach (var item in Model.Images)
