--- a/AzarKandidaV2/Views/Home/Index.cshtml
+++ b/AzarKandidaV2/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                 <img src="~/Resources/Blogs/Thumb/@item.MainImage" class="card-img-top" alt="@item.Name">
                 <div class="card-body">
                     <h5 class="card-title">@item.Name</h5>
-                    <p class="card-text">   
+                    <p class="card-text">
                         @item.Title
                     </p>
                     <a href="/Blogs/@item.BlogId" class="link-primary text-decoration-none">بیشتر...</a>
@@ -29,7 +29,28 @@
     </div>
 </div>
 
-<h2 class="h5 mb-4" dir="rtl">
+<div class="row" style="border:0.5px solid black;padding:5px;">
+
+        <div class="col-md-9">
+            <div>
+                <p class="card-text text-center">
+                    بسمه تعالی
+                </p>
+                <p class="card-text text-center" style="line-height:30px;">
+                    اینجانب لطیف لطیفی، در راستای حفظ و حراست از انقلاب اسلامی و لبیک به فرامین حضرت امام خمینی (ره) علاوه بر پیوستن به سپاه، در اجرای فرامین ایشان مبنی بر خدمت رسانی، ضمن انجام خدمات سازمانی که اغلب در حوزه های آموزشی، تربیتی، فرهنگی، سیاسی و مرکز تفکر راهبردی در سپاه منطقه مقاومت بسیج آذربایجان شرقی و سپاه عاشورا به همراه نزدیک دو دهه تدریس در دانشگاه های تبریز، آزاد تبریز، فرهنگیان، پیام نور، علمی کاربردی و ... بوده است،
+                </p>
+                <h5 class="card-text text-justify" style="margin-top:5%;">
+                    نخبگان و شهروندان عزیز با تعلیم و تربیت نرم افزاری می توان در شهرها به زندگی آرام بخش کمک کرد.
+                </h5>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <img style="width:100%" src="~/Resources/Images/Image1.jpeg" />
+        </div>
+   
+</div>
+
+<h2 class="h5 mb-4" dir="rtl" style="margin-top:20px;">
     - کاندیداهای شورای اسلامی شهر تبریز
 </h2>
 <div class="grid">
